Switch height css tag to min-height to prevent white edge when content overflows

--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@
 .timeline {
   background-color: var(--timeline-background);
   padding: 1rem;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .job-card {
